[workspace]
resolver = "2"
members = ["start-linux", "start-linux-attr", "lib-linux", "utilities"]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" }
syscalls = { version = "0.6", default-features = false }
lib-linux = { path = "lib-linux" }
start-linux = { path = "start-linux" }
start-linux-attr = { path = "start-linux-attr" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
